--- a/frontend/src/Components/ListaEntradas.module.css
+++ b/frontend/src/Components/ListaEntradas.module.css
@@ -1,3 +1,13 @@
 .nolink {
     text-decoration: none;
 }
+.tit3 {
+    text-align: left;
+    padding-left: 1rem;
+    padding-right: 3rem;
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-bottom: 01.5rem;
+    color: white;
+    text-decoration: none;
+}
