--- a/frontend/src/PagesVenta/Datos.module.css
+++ b/frontend/src/PagesVenta/Datos.module.css
@@ -7,8 +7,27 @@ h1 {
     font-size: 2rem;    
 }
 
-.botonsubmit {
+.input1 {
+    font-size: 1rem;
+    width: 70%;
+    margin-left: 3rem;
+    margin-right: 3rem;
+    margin-top: 1rem;
     border-radius: 0.6rem;
+    padding: 0.5rem;
+    border-style: none;
+}
+
+.botonsubmit {
+    font-size: 1rem;
+    font-weight: 510;
+    margin-top: 2rem;
+    border-radius: 0.6rem;
+    border-style: none;
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     background: linear-gradient(180deg, #772CE8 0%, #A41DC1 100%);
 }
 
@@ -24,7 +43,7 @@ h1 {
 
 .text11 {
     padding-left: 1rem;
-    text-align: left;
+    text-align: center;
     color: white;
     font-size: 2rem;
     padding: 1rem;
@@ -38,15 +57,15 @@ h1 {
 }
 
 .img1 {
-    margin-top: 2rem;
+    margin-top: 1rem;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
     border-radius: 1rem;
     object-fit: cover;
-    width: 20rem;
-    height: 20rem;
+    width: 15rem;
+    height: 15rem;
 }
 
 .divimg2 {
