FrontEnd Error corrections

--- a/frontend/src/Pages/LandingPage.module.css
+++ b/frontend/src/Pages/LandingPage.module.css
@@ -26,6 +26,15 @@ h2 {
     margin-bottom: -1rem;
 }
 
+.tit5 {
+    margin-top: 0rem;
+    text-align: left;
+    font-size: 1.2rem;
+    margin-left: 1rem;
+    padding: 0rem;
+    margin-bottom: -1rem;
+}
+
 .logorv {
     margin-top: 2rem;
     margin-bottom: 2rem;
