--- a/frontend/src/Components/App.module.css
+++ b/frontend/src/Components/App.module.css
@@ -24,11 +24,12 @@
 }
 
 .footer1 {
-  position: sticky;
+  position: absolute;
   font-weight: 200;
-  margin-bottom: 3rem;
-  margin-bottom: 0.5rem;
-  margin-top: 4rem;
+  padding-bottom: 1rem;
+  margin-top: 8rem;
+  margin-left: 4.4rem;
+  margin-right: 4.4rem;
   text-align: center;
   font-size: 1.5rem;
 }
@@ -37,6 +38,24 @@
   color: white;
   text-decoration: none;
   color: white;
+}
+
+.nolink {
+  text-decoration: none;
+  color: white;
+  padding: 0.5rem;
+  
+}
+
+.img1 {
+  position: relative;
+  margin-top: 2rem;
+  margin-left: 80%;
+  margin-right: 2rem;
+  margin-bottom: -2rem;
+  width: 2rem;
+  height: 2rem;
+  fill: -webkit-linear-gradient(180deg, #751cfa 0%, #d213fd 100%);
 }
 
 @media (max-width: 560px) {
