--- a/frontend/src/PagesVenta/Discoteca.module.css
+++ b/frontend/src/PagesVenta/Discoteca.module.css
@@ -21,3 +21,16 @@
 .dv1 {
     margin-top: 2rem;
 }
+
+
+.barra {
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    
+}
+
+hr {
+    color: white;
+}
