--- a/frontend/src/Pages/Eventos.module.css
+++ b/frontend/src/Pages/Eventos.module.css
@@ -12,27 +12,17 @@ h1 {
 }
 
 .text11 {
-    padding-left: 1rem;
-    text-align: left;
+    text-align: center;
     color: white;
-    font-size: 2rem;
-    padding: 1rem;
-    padding-bottom: 0rem;
+    font-size: 0.8rem;
 }
 
 .text12 {
-    padding-left: 1rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     text-align: left;
     color: white;
     font-size: 2rem;
-    padding: 1rem;
-    padding-bottom: 0rem;
-}
-
-.text12 {
-    text-align: left;
-    color: white;
-    font-size: 0.5rem;
 }
 
 .img1 {
@@ -42,17 +32,15 @@ h1 {
     margin-right: auto;
     width: 50%;
     border-radius: 1rem;
-    
+    object-fit: cover;
     width: 20rem;
     height: 20rem;
-    background-color: white;
-    padding: 2rem;
 }
 
 .divimg2 {
     padding: 2rem;
-    padding-bottom: 2rem;
-    padding-top: 2rem;
+    padding-bottom: 0rem;
+    padding-top: 0rem;
 }
 
 .img2 {
@@ -61,29 +49,13 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    height: 8rem;
+    height: 3rem;
     padding: 6rem;
     padding-top: 1rem;
-    padding-bottom: 0rem;
-}
-
-.new1 {
-    padding-left: 1rem;
-    text-align: left;
-    color: white;
-    font-size: 1.1rem;
-    padding: 1rem;
     padding-bottom: 0rem;
 }
 
 .boton1 {
     padding: 3rem;
     padding-bottom: 0rem;
-    padding-top: 0rem;
-}
-
-.codigo{
-    text-align: center;
-    padding: auto;
-    margin-left: -0.5rem;
 }
