--- a/frontend/src/Pages/Ordenador.module.css
+++ b/frontend/src/Pages/Ordenador.module.css
@@ -1,11 +1,15 @@
 .text1 {
-    text-align: center;
-    margin: 8rem;
+  text-align: center;
+  margin: 8rem;
 }
 
-.img1{
-    margin-top: 4rem;
-    display:block;
-    margin:auto;
-    width: 25rem;
-    }
+.img1 {
+  margin-top: 4rem;
+  display: block;
+  margin: auto;
+  width: 25rem;
+}
+
+.img2 {
+  width: calc(100vw - (100vw - 100%));
+}
